--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 Django==3.0.7
-django-cors-headers==3.7.0
+django-cors-headers==3.3.0
 six==1.15.0
-django-filter==2.4.0
-djangorestframework==3.12.2
+django-filter==2.3.0
+djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
-PyJWT==2.0.1
-pytz==2021.1
+PyJWT==1.7.1
+pytz==2020.1
+psycopg2
+gunicorn
+django-heroku
+dj-database-url
